fixed javascript for mid logo on dark mode switcher, added a href for logo in top right of screen

--- a/css/testing.css
+++ b/css/testing.css
@@ -72,6 +72,7 @@ body {
     -moz-transition: opacity 0.4s ease-in-out;
     -o-transition: opacity 0.4s ease-in-out;
     transition: opacity 0.4s ease-in-out;
+    cursor: pointer;
   }
   .logo2{
       margin-left: 1810px;
@@ -86,6 +87,7 @@ body {
       -moz-transition: opacity 0.4s ease-in-out;
       -o-transition: opacity 0.4s ease-in-out;
       transition: opacity 0.4s ease-in-out;
+      cursor: pointer;
     
   }
   #navbar:hover .logo{
